--- a/R/04_describe.qmd
+++ b/R/04_describe.qmd
@@ -174,9 +174,67 @@ Choice of NA imputation: We need to base our decision on the nature of the data 
 ```{r}
 
 # load mouse uniprot db file for lookup
-dftest <- read_tsv(file = here("data/01_dat_load_mus_musculus.tsv"))
+df_uniprot_mouse <- read_tsv(file = here("data/01_dat_load_uniprot_mouse.tsv"))
+```
+
+```{r}
+# pseudo code
+
+# custom_function <- function(x, y){
+## function that takes in string x and looks for string pattern in uniprot tibble y, giving back the value in keyword column.
+Keywords <- df_y |> 
+  filter(str_detect(Entry, x)) |> 
+  pull(Keywords)
+  
+
+# df_norm_long |> 
+# mutate(description_column = map_chr(
+#   .x = Proteins,
+#   .f = custom_function(.x)
+
+```
+
+```{r}
+Keywords <- df_uniprot_mouse |> 
+  filter(str_detect('P02301;P68433;P84228;P84244', Entry)) |> 
+  pull(Keywords) |> 
+  str_c(collapse ='; ')
 ```
 
 ```{r}
 
+uniprot_lookup <- function(pg_id, dataframe, id_column, keyword_column){
+  ## function that takes in string x and looks for string pattern in uniprot tibble y, giving back the value in keyword column.
+  Keywords <- dataframe |> 
+  filter(str_detect(pg_id, id_column)) |> 
+  pull(keyword_column) |> 
+  str_c(collapse ='; ')
+  return(Keywords)
+}
+
+  
+df_test <- df_norm_long |> 
+  mutate(description_column = map_chr(
+     .x = protein_groups,
+     .f = ~uniprot_lookup(pg_id=.x, dataframe=df_uniprot_mouse, id_column="Entry", keyword_column="Keywords")
+   ))
+```
+
+```{r}
+# debug with dummy 
+uniprot_lookup <- function(pg_id, dataframe, id_column, keyword_column){
+  ## function that takes in string x and looks for string pattern in uniprot tibble y, giving back the value in keyword column.
+  Keywords <- dataframe |> 
+  filter(str_detect(pg_id, id_column)) |> 
+  pull(keyword_column) |> 
+  str_c(collapse ='; ')
+  return(Keywords)
+}
+
+  
+df_test <- df_norm_long |> 
+  mutate(description_column = map_chr(
+     .x = protein_groups,
+     .f = ~uniprot_lookup(pg_id=.x, dataframe=df_uniprot_mouse, id_column="Entry", keyword_column="Keywords")
+))
 ```
