--- a/R/05_analysis_PCA.qmd
+++ b/R/05_analysis_PCA.qmd
@@ -1,10 +1,12 @@
+## Make PCA plot
+
 ```{r}
 library(tidyr)
 library('ggbiplot')
 
 
-#Augmented data, excluding columns with missing data.
-df_input <- df_no_na_wide[, -(1:2)] |> 
+#Input data tois wide format, excluding columns with missing data.
+df_input <- df_no_na_wide |> select(-c('sample','cell_type')) |> 
   mutate(across(where(is.list), ~ sapply(., function(x) x[1]))) |> 
   na.omit() 
   
@@ -12,10 +14,10 @@ df_input <- df_no_na_wide[, -(1:2)] |>
 pc <- prcomp(df_input, center = FALSE, scale = FALSE)
 
 #Gives overview of variability of PC
-print(pc)
+#print(pc)
 
 #Gives an overview, you should be able to tell the variance already here even without the plot.
-summary(pc)
+#summary(pc)
 
 biplot <- ggbiplot(pc,
                    obs.scale = 0,
@@ -31,6 +33,11 @@ biplot <- ggbiplot(pc,
         )+
   theme(legend.position = 'top',aspect.ratio = 1)
 
-
 print(biplot)
+```
+
+## Save plot
+
+```{r}
+ggsave(plot = biplot, filename = "PCA_on_proteingroups1.png", width = 20, height = 10, units = "cm", path = here("results"))
 ```
