--- a/R/06_analysis_volcano.qmd
+++ b/R/06_analysis_volcano.qmd
@@ -48,7 +48,11 @@ augmenting_data(df_no_na_long, "hsc", "clp")
 
 Volcano plots are useful for comparing how different proteins are expressed in two different cell types. Typically on the x-axis the volcanoplot has the log2-fold-change, which is computed as log2 of the ratio between the later-stage cell type and the earlier-stage cell-type. Typically on the y-axis is the -log10 of p-value or q-value of the the two cell-types.
 
-The order of development of the cells is as follows.
+The order of development of the cells in haematopoiesis is as follows (from Laurenti, E., Göttgens, B. From haematopoietic stem cells to complex differentiation landscapes. *Nature* **553**, 418–426 (2018). https://doi.org/10.1038/nature25022)
+
+![](images/Screenshot%202024-11-29%20at%2017.09.29.png)
+
+Therefore we will create four volcanoplots that compare the different stages. CLP will be compared to HSC. CMP will be comared to HSC. And then MEP and GMP will be compared to CMP. In order to prepare the data for these volcanoplots there must be for each pair of compared cell-types be created a variable of log2-fold-change and of q-value. To figure out this data wrangling took quite a bit of effort.
 
 ## CLP relative to HSC
 
