--- a/R/01_load.qmd
+++ b/R/01_load.qmd
@@ -13,22 +13,25 @@ library(here)
 
 # Loading Data
 
+Downloading data from dropbox containing the proteomics dataset.
+
 ```{r}
-raw_dir <- here("data/data_raw")
+#defining path to store data in the folder data_raw
+raw_dir <- here("data/_raw")
 data_file <- "mouse_cell_stages.zip"
-data_loc <- "https://www.dropbox.com/scl/fi/d63o8sgp03fyu2s6tsqau/group_6_data.zip?rlkey=50z2rrfaowoizqivttdmyym2i&st=kngr6y9j&dl=1"
+data_location <- "https://www.dropbox.com/scl/fi/d63o8sgp03fyu2s6tsqau/group_6_data.zip?rlkey=50z2rrfaowoizqivttdmyym2i&st=kngr6y9j&dl=1"
 
 
-if( !dir.exists(raw_dir) ){
+if( !dir.exists(raw_dir) ){ # Check if the path already exists and creates it if it doesn't  exist
   dir.create(path = raw_dir)
-}
-if( !file.exists(str_c(raw_dir, data_file, sep = "/")) ){
+} 
+if( !file.exists(str_c(raw_dir, data_file, sep = "/")) ){ # Downloads the data unless it is not already downloaded
   download.file(
-    url = data_loc,
+    url = data_location,
     destfile = str_c(raw_dir, data_file, sep = "/"))
 }
-# Unzip the proteomics data
 
+# Unzip the proteomics data
 unzip(str_c(raw_dir, data_file, sep = "/"), exdir = raw_dir)
 ```
 
@@ -51,12 +54,10 @@ df_cmp <- read_csv2(file = here("data/raw_data/group6_data_CMP_Report.csv"), na=
 ### Save the data-file for 02_clean.qmd
 
 ```{r}
-data_path <- here("data")
-file_name <- "01_df_intensities.tsv.gz"
 
-write_tsv(df_hsc, file = here("data/01_hsc.tsv"))
-write_tsv(df_mep, file = here("data/01_mep.tsv"))
-write_tsv(df_gmp, file = here("data/01_gmp.tsv"))
-write_tsv(df_clp, file = here("data/01_clp.tsv"))
-write_tsv(df_cmp, file = here("data/01_cmp.tsv"))
+write_tsv(df_hsc, file = here("data/01_hsc.tsv.gz"))
+write_tsv(df_mep, file = here("data/01_mep.tsv.gz"))
+write_tsv(df_gmp, file = here("data/01_gmp.tsv.gz"))
+write_tsv(df_clp, file = here("data/01_clp.tsv.gz"))
+write_tsv(df_cmp, file = here("data/01_cmp.tsv.gz"))
 ```
